Thu Apr 26 12:15:02 CEST 2012
-----------------------------
	new file:   amsn/amsn.SlackBuild
	new file:   farsight2/farsight2.SlackBuild
	modified:   flash-player/flash-player.SlackBuild
	new file:   glib-networking/glib-networking.SlackBuild
	new file:   gssdp/gssdp.SlackBuild
	new file:   gupnp-igd/gupnp-igd.SlackBuild
	new file:   gupnp/gupnp.SlackBuild
	new file:   libevent/libevent.SlackBuild
	new file:   libnice/libnice.SlackBuild
	new file:   libsoup/libsoup.SlackBuild
	new file:   tls/tls.SlackBuild

Sun Apr 22 00:50:36 CEST 2012
-----------------------------
	modified:   libproxy/libproxy.SlackBuild

Sat Apr 21 18:23:05 CEST 2012
-----------------------------
	new file:   cnijfilter-mp495series/cnijfilter-mp495series.SlackBuild
	new file:   exif/exif.SlackBuild
	new file:   libproxy/libproxy.SlackBuild
	modified:   spkg/spkg.SlackBuild
	modified:   unrar/unrar.SlackBuild

Thu Apr 19 16:32:18 CEST 2012
-----------------------------
	new file:   gst-python/gst-python.SlackBuild
	new file:   jhead/jhead.SlackBuild
	new file:   judy/judy.SlackBuild
	new file:   libgnome-keyring/libgnome-keyring.SlackBuild
	new file:   libtasn1/libtasn1.SlackBuild
	new file:   ntlmaps/ntlmaps.SlackBuild
	new file:   p7zip/p7zip.SlackBuild
	modified:   slackyd/slackyd.SlackBuild
	new file:   slapt-get/slapt-get.SlackBuild
	new file:   spkg/spkg.SlackBuild
	new file:   ssldump/ssldump.SlackBuild

Thu Apr 19 00:08:44 CEST 2012
-----------------------------
	new file:   bar/bar.SlackBuild
	new file:   cabextract/cabextract.SlackBuild
	new file:   centerim/centerim.SlackBuild
	new file:   compat32-libraries/compat32-libraries.SlackBuild
	new file:   corkscrew/corkscrew.SlackBuild
	new file:   flash-player/flash-player.SlackBuild
	new file:   gpart/gpart.SlackBuild
	new file:   libsigc++/libsigc++.SlackBuild
	new file:   nvidia-linux/nvidia-linux.SlackBuild
	new file:   rarlinux/rarlinux.SlackBuild
	new file:   skype_static/skype_static.SlackBuild