@@ -1,0 +1,17 @@
+if [ -f usr/bin/chromium-sandbox ]; then
+  chmod 4755 usr/bin/chromium-sandbox
+fi
+
+if [ -x /usr/bin/update-desktop-database ]; then
+    usr/bin/update-desktop-database -q usr/share/applications >/dev/null 2>&1
+fi
+if [ -x /usr/bin/update-mime-database ]; then
+  usr/bin/update-mime-database usr/share/mime >/dev/null 2>&1
+fi
+if [ -e usr/share/icons/hicolor/icon-theme.cache ]; then
+  if [ -x /usr/bin/gtk-update-icon-cache ]; then
+    usr/bin/gtk-update-icon-cache usr/share/icons/hicolor >/dev/null 2>&1
+  fi
+fi
+
+
