@@ -1,0 +1,11 @@
+prefix=/usr
+exec_prefix=/usr
+libdir=/usr/lib64/seamonkey-2.9
+includedir=/usr/include/seamonkey-2.9
+
+Name: NSS
+Description: Mozilla Network Security Services
+Version: 2.9
+Requires: seamonkey-nspr >= 4.7.1
+Libs: -L${libdir} -lnss3 -lsmime3 -lssl3 -lsoftokn3 -lnssutil3
+Cflags: -I${includedir}
