@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|'
+# on the right side marks the last column you can put a character in.  You must
+# make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':'.
+
+        |-----handy-ruler----------------------------------------------------|
+chromium: Chromium (Google Chrome Open-Source Project)
+chromium:
+chromium: Chromium  is  a  browser  that combines  a minimal design with
+chromium: sophisticated  technology  to  make the web faster, safer, and
+chromium: easier. Is the free-brand version of Google Chrome.
+chromium:
+chromium:
+chromium:
+chromium:
+chromium:
+chromium:
