@@ -1,0 +1,43 @@
+GConf >= 2.32.1-x86_64-1
+ORBit2 >= 2.14.19-x86_64-1
+alsa-lib >= 1.0.25-x86_64-1
+atk >= 1.32.0-x86_64-1
+bzip2 >= 1.0.6-x86_64-1
+cairo >= 1.10.2-x86_64-2
+cups >= 1.4.8-x86_64-1
+dbus >= 1.4.1-x86_64-1
+expat >= 2.0.1-x86_64-2
+fontconfig >= 2.8.0-x86_64-1
+freetype >= 2.4.8-x86_64-1
+gcc >= 4.7.0-x86_64-1
+gcc-g++ >= 4.7.0-x86_64-1
+gdk-pixbuf2 >= 2.23.3-x86_64-1
+glib2 >= 2.28.6-x86_64-1
+glibc-solibs >= 2.15-x86_64-2
+gtk+2 >= 2.24.4-x86_64-1
+libX11 >= 1.4.3-x86_64-2
+libXScrnSaver >= 1.2.1-x86_64-1
+libXau >= 1.0.6-x86_64-1
+libXcomposite >= 0.4.3-x86_64-1
+libXcursor >= 1.1.11-x86_64-1
+libXdamage >= 1.1.3-x86_64-1
+libXdmcp >= 1.1.0-x86_64-1
+libXext >= 1.2.0-x86_64-1
+libXfixes >= 5.0-x86_64-1
+libXi >= 1.4.2-x86_64-1
+libXinerama >= 1.1.1-x86_64-1
+libXrandr >= 1.3.1-x86_64-1
+libXrender >= 0.9.6-x86_64-1
+libgcrypt >= 1.4.6-x86_64-1
+libgpg-error >= 1.9-x86_64-1
+libjpeg >= v8a-x86_64-1
+libpng >= 1.4.9-x86_64-1
+libxcb >= 1.7-x86_64-1
+libxml2 >= 2.7.8-x86_64-3
+libxslt >= 1.1.26-x86_64-1
+openssl >= 0.9.8w-x86_64-1 | openssl-solibs >= 0.9.8w-x86_64-1
+pango >= 1.28.4-x86_64-1
+pixman >= 0.20.2-x86_64-1
+seamonkey-solibs >= 2.9-x86_64-1
+udev >= 165-x86_64-2
+zlib >= 1.2.6-x86_64-1
