@@ -1,3 +1,7 @@
+Mon Apr 30 22:34:27 CEST 2012
+-----------------------------
+	new file:   chromium/chromium.SlackBuild
+
 Thu Apr 26 12:15:02 CEST 2012
 -----------------------------
 	new file:   amsn/amsn.SlackBuild
